# ecurvechat

./: Cargo.toml  README.md  build.rs
src/: aes_ctr.rs  client_server_shared.rs  elliptic_curves.rs  hmac.rs  keypair.rs  lib.rs  message.rs  std_curves.rs  ttp_msg_codes.rs
src/backend/: client_ec.rs  mod.rs  server_ec.rs
src/protos/: protos.proto
