[package]
name = "ecurvechat"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
hex = "0.4.3"
num-bigint = {version = "0.4.6", features = ["rand"]}
num-iter = "0.1.45"
num-traits = "0.2.19"
once_cell = "1.19.0"
protobuf = "3"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha256 = "1.5.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
